--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>src/main/resources/CreateTypeVacation.xml</suiteXmlFile>
                         <suiteXmlFile>src/main/resources/ChangeVacationType.xml</suiteXmlFile>
+                        <suiteXmlFile>src/main/resources/Get_Employee_Tests.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
