--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rest-assured.version>5.3.0</rest-assured.version>
         <allure.rest-assured.version>2.20.1</allure.rest-assured.version>
+        <allure-testng.version>2.20.1</allure-testng.version>
         <jackson.version>2.12.3</jackson.version>
         <json.version>20220924</json.version>
         <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
