--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>7.7.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </dependency>
         <!-- JSON Dependency -->
         <dependency>
             <groupId>org.json</groupId>
