--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,16 @@
             <artifactId>allure-testng</artifactId>
             <version>2.20.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-testng-adaptor</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
         <!-- Rest Assured Dependency -->
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -157,7 +166,6 @@
                 <configuration>
                     <reportVersion>2.10.0</reportVersion>
                     <reportDirectory>${basedir}/target/allure-reports</reportDirectory>
-
                 </configuration>
             </plugin>
         </plugins>
